@@ -14,6 +14,7 @@ PHP                                                                        NEWS
     that is unset in error handler). (Girgias)
   . Fixed bug GH-12102 (Incorrect compile error when using array access on TMP
     value in function call). (ilutov)
+  . Fixed warning emitted when checking if a user stream is castable. (Girgias)
 
 - FPM:
   . Fixed GH-12077 (PHP 8.3.0RC1 borked socket-close-on-exec.phpt).
